--- a/HTML/actu.html
+++ b/HTML/actu.html
@@ -261,7 +261,7 @@
                         </div>
     
                         <div class="info_lol">
-                            <h4>Tournoi de la ligue of legend</h4>
+                            <h4>Tournoi de la Ligue Of Legend</h4>
     
                             <p>Mattez les plus grand affrontement LOL 5v5. le tournoir de la Ligue of legende rassemble les meilleurs strateges et combattants de ce domaine dans l’e-sport moderne. <br><br>
 
