--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/actu.css">
+    <link rel="stylesheet" href="../Streaming_Gamers/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
     <title>Gaming space</title>
@@ -20,9 +20,9 @@
             <nav>
                 <ul>
                     <li><a href="">Accueil</a></li>
-                    <li><a href="./HTML/stream.html">Stream</a></li>
-                    <li><a href="./HTML/actu.html">Actu</a></li>
-                    <li><a href="./HTML/assistance.html"><i class="fa-solid fa-headset"></i></a></li>
+                    <li><a href="../Streaming_Gamers/HTML/stream.html">Stream</a></li>
+                    <li><a href="../Streaming_Gamers/HTML/actu.html">Actu</a></li>
+                    <li><a href="../Streaming_Gamers/HTML/assistance.html"><i class="fa-solid fa-headset"></i></a></li>
                 </ul>
             </nav>
             
